added some simple UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="d_string">D</string>
     <string name="a_string">A</string>
     <string name="e_String">E</string>
+    <string name="g_String">G</string>
+    <string name="b_String">B</string>
 </resources>
